fix(ai): correct Endor occupation and shield slots